--- a/day50/index.html
+++ b/day50/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Code Player</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:200,300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/master.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1><i class="fa fa-code" aria-hidden="true"></i> <span>CODE PLAYER</span></h1>
-      <h3 id="run"><i class="fa fa-play" aria-hidden="true"></i> Run</h3>
-      <h3><i class="fa fa-download" aria-hidden="true"></i> Save</h3>
-    </header>
 
-    <section>
-      <div class="html">
-        <!-- <div class="toggle"></div> -->
-        <textarea name="name" id="html"></textarea>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Code Player</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:200,300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./lib/prism.css">
+  <link rel="stylesheet" href="./css/master.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
 
-      <div class="css">
-        <textarea name="name" id="css"></textarea>
-      </div>
+<body>
+  <header>
+    <h1><i class="fa fa-code" aria-hidden="true"></i> <span>CODE PLAYER</span></h1>
+    <h3 id="run"><i class="fa fa-play" aria-hidden="true"></i> Run</h3>
+    <h3><i class="fa fa-download" aria-hidden="true"></i> Save</h3>
+  </header>
 
-      <div class="js">
-        <textarea name="name" id="js"></textarea>
-      </div>
+  <section>
+    <div class="html">
+      <!-- <div class="toggle"></div> -->
+      <textarea name="name" id="html"></textarea>
+    </div>
 
-      <div >
-        <iframe class="run"></iframe>
-      </div>
-    </section>
-    <script type="text/javascript" src="./js/script.js"></script>
-  </body>
+    <div class="css">
+      <textarea name="name" id="css"></textarea>
+    </div>
+
+    <div class="js">
+      <textarea name="name" id="js"></textarea>
+    </div>
+
+    <div>
+      <iframe class="run"></iframe>
+    </div>
+  </section>
+
+  <script type="text/javascript" src="./lib/prism.js"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
+</body>
+
 </html>
