--- a/day50/index.html
+++ b/day50/index.html
@@ -7,7 +7,7 @@
   <title>Code Player</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:200,300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./lib/prism.css">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" href="./css/master.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -38,7 +38,6 @@
     </div>
   </section>
 
-  <script type="text/javascript" src="./lib/prism.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
 </body>
 
